--- a/docs/.vuepress/.temp/sass-palette/hope-style.scss
+++ b/docs/.vuepress/.temp/sass-palette/hope-style.scss
@@ -1,1 +1,1 @@
-@forward "file:///D:/Git/GitHub/siteweb-inflorescences-quinoa-fr/docs/.vuepress/styles/index.scss";
+@forward "file:///D:/Git/GitHub/inflorescences-quinoa.fr/docs/.vuepress/styles/index.scss";
