--- a/docs/.vuepress/.temp/sass-palette/hope-palette.scss
+++ b/docs/.vuepress/.temp/sass-palette/hope-palette.scss
@@ -1,3 +1,3 @@
-@import "file:///D:/Git/GitHub/siteweb-inflorescences-quinoa-fr/node_modules/vuepress-theme-hope/templates/palette/palette.scss";
-@import "file:///D:/Git/GitHub/siteweb-inflorescences-quinoa-fr/docs/.vuepress/styles/palette.scss";
-@import "file:///D:/Git/GitHub/siteweb-inflorescences-quinoa-fr/node_modules/vuepress-theme-hope/templates/palette/generator.scss";
+@import "file:///D:/Git/GitHub/inflorescences-quinoa.fr/node_modules/vuepress-theme-hope/templates/palette/palette.scss";
+@import "file:///D:/Git/GitHub/inflorescences-quinoa.fr/docs/.vuepress/styles/palette.scss";
+@import "file:///D:/Git/GitHub/inflorescences-quinoa.fr/node_modules/vuepress-theme-hope/templates/palette/generator.scss";
