--- a/docs/.vuepress/public/styles/theme-overrides.css
+++ b/docs/.vuepress/public/styles/theme-overrides.css
@@ -25,7 +25,7 @@
 
 /*remove second level of breadcrumb*/
 .vp-breadcrumb ol li:nth-child(2) {
-  display: none;
+  /* display: none; */
 }
 
 .custom-page .page-info,
